--- a/DDD.Api/Properties/launchSettings.json
+++ b/DDD.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "DDD.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
