--- a/DDD.Api/appsettings.json
+++ b/DDD.Api/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "pgsql": "PORT=5432;DATABASE=DDDDEMO;HOST=localhost;PASSWORD=acalepgpwd;USER ID=pgadmin;Pooling=true; MinPoolSize=10; MaxPoolSize=100;",
   "AllowedHosts": "*"
 }
