--- a/DDD.Api/DDD.Api.csproj
+++ b/DDD.Api/DDD.Api.csproj
@@ -8,7 +8,7 @@
     <DocumentationFile>C:\Users\WCF713.CONST\Desktop\分享\DDDDemo\DDD.Api\DDD.Api.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.0.0" />
+    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.1.1" />
     <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
@@ -31,4 +31,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
