--- a/DDD.Api/appsettings.json
+++ b/DDD.Api/appsettings.json
@@ -1,11 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "pgsql": "PORT=5432;DATABASE=DDDDEMO;HOST=localhost;PASSWORD=acalepgpwd;USER ID=pgadmin;Pooling=true; MinPoolSize=10; MaxPoolSize=100;",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest",
+    "ExchangeName": "DDDDEMO"
+  }
 }
